# exchangeos-backend-demo

./: .gitignore  README.md  alembic.ini  pyproject.toml
src/app/: main.py
src/app/api/v1/: auth.py  organization_ledger.py  organization_members.py  organization_orders.py  organization_requisites.py  organization_settings.py  organization_stats.py  organizations.py  platform_organizations.py  router.py  users.py
src/app/core/: config.py
src/app/db/: base.py  gateway.py  session.py
src/app/db/core/: connection.py  manager.py
src/app/db/migrations/: env.py
src/app/db/models/: __init__.py  account.py  audit_log.py  enums.py  ledger_entry.py  ledger_transaction.py  member_permission.py  mixins.py  order.py  organization.py  organization_member.py  organization_setting.py  payment_requisite.py  permission.py  role.py  role_permission.py  settings_catalog.py  user.py
src/app/db/repositories/: __init__.py  account.py  audit_log.py  base.py  crud.py  ledger_entry.py  ledger_transaction.py  member.py  member_permission.py  order.py  organization.py  organization_setting.py  payment_requisite.py  permission.py  role.py  role_permission.py  user.py
src/app/db/seed/: permissions.py
src/app/schemas/: auth.py  ledger.py  order.py  organization.py  organization_member.py  organization_setting.py  payment_requisite.py  platform_organization.py  stats.py  user.py
src/app/services/: auth_service.py  exceptions.py  order_rules.py  orders_service.py  requisites_service.py  settlement_service.py  stats_service.py
src/app/services/access/: __init__.py  access_service.py
(+22 files in other folders)
